force-app/main/default/objects/Non_Conformance__c/Non_Conformance__c.object-meta.xml
<CustomObject>
    <description>Used when customer reports an issue.</description>
    <label>Non Conformance</label>
    <nameField>
        <displayFormat>NC-{0000}</displayFormat>
        <label>Non Conformance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non Conformances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>