force-app/main/default/objects/Non_Conformance__c/fields/Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Closure_Date__c</fullName>
    <label>Closure_Date</label>
    <type>Date</type>
</CustomField>