force-app/main/default/objects/Non_Conformance__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Non Conformances</relationshipLabel>
    <relationshipName>Non_Conformances</relationshipName>
    <type>Lookup</type>
</CustomField>