force-app/main/default/objects/Non_Conformance__c/fields/Corrective_Action__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action__c</fullName>
    <label>Corrective_Action</label>
    <type>TextArea</type>
</CustomField>