force-app/main/default/objects/Non_Conformance__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Non Conformances (Customer)</relationshipLabel>
    <relationshipName>Non_Conformances1</relationshipName>
    <type>Lookup</type>
</CustomField>