force-app/main/default/objects/Non_Conformance__c/fields/Issue_Description__c.field-meta.xml
<CustomField>
    <fullName>Issue_Description__c</fullName>
    <label>Issue_Description</label>
    <type>TextArea</type>
</CustomField>