force-app/main/default/objects/Non_Conformance__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Non Conformances</relationshipLabel>
    <relationshipName>Non_Conformances</relationshipName>
    <type>Lookup</type>
</CustomField>