force-app/main/default/objects/Non_Conformance__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection_Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>